--- a/composer.json
+++ b/composer.json
@@ -4,11 +4,12 @@
 	"description": "Enable Content Security Policy for your forum.",
 	"homepage": "https://tas2580.net/downloads/download-7.html",
 	"version": "0.1.0",
-	"keywords": ["phpbb", "extension", "social", "topics"],
+	"keywords": ["phpbb", "extension", "contentsecurety", "securety", "header"],
 	"license": "GPL-2.0",
 	"authors": [
 		{
-			"name": "Tobi Schäfer",
+			"name": "tas2580",
+			"name": "tas2580",
 			"homepage": "https://tas2580.net",
 			"role": "Developer"
 		}
