--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
 	"authors": [
 		{
 			"name": "tas2580",
-			"name": "tas2580",
+			"email": "mail@tas2580.net",
 			"homepage": "https://tas2580.net",
 			"role": "Developer"
 		}
