--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
 	"name": "tas2580/contentsecurety",
 	"type": "phpbb-extension",
 	"description": "Enable Content Security Policy for your forum.",
-	"homepage": "https://tas2580.net/downloads/download-7.html",
+	"homepage": "https://tas2580.net/downloads/phpbb-content-security-policy/",
 	"version": "0.1.0",
 	"keywords": ["phpbb", "extension", "contentsecurety", "securety", "header"],
 	"license": "GPL-2.0",
@@ -25,6 +25,11 @@
 		"display-name": "tas2580 Content Security Policy",
 		"soft-require": {
 			"phpbb/phpbb": ">=3.1.0-RC2,<3.2.*@dev"
+		},
+		"version-check": {
+			"host": "phpbb-versionscheck.cf",
+			"directory": "/tas2580/contentsecurety/master",
+			"filename": "version-check.json"
 		}
 	}
 }
